# wininstalltool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-windows.yml
config/: apps.example.json
doc/: README.md
doc/core/: project.md  software-support-matrix.md
src/: config.rs  engine.rs  main.rs  ui_model.rs
tests/: apps_example.rs  ui_layout.rs
ui/: main.slint
